exports[`hiDPI should pass ratio to media query 1`] = `
Object {
  "
    @media only screen and (-webkit-min-device-pixel-ratio: 1.5),
    only screen and (min--moz-device-pixel-ratio: 1.5),
    only screen and (-o-min-device-pixel-ratio: 1.5/1),
    only screen and (min-resolution: 144dpi),
    only screen and (min-resolution: 1.5dppx)
  ": Object {
    "width": "200px",
  },
}
`;

exports[`hiDPI should set a default ratio of 1.3 when no ratio is passed 1`] = `
Object {
  "
    @media only screen and (-webkit-min-device-pixel-ratio: 1.3),
    only screen and (min--moz-device-pixel-ratio: 1.3),
    only screen and (-o-min-device-pixel-ratio: 1.3/1),
    only screen and (min-resolution: 125dpi),
    only screen and (min-resolution: 1.3dppx)
  ": Object {
    "width": "200px",
  },
}
`;

exports[`hiDPI should throw a warning when called with more than 1 parameter 1`] = `
Array [
  Array [
    "%c ✨ WARNING ✨ ---- mixins/hiDPI.js --%c

hiDPI %cexpects a maximum of %c1 parameter%c. However, you passed %c2 parameters%c. These additional parameters were ignored.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#hiDPI%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold; color: green",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold; color: goldenrod",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`hiDPI should throw an error and a warning when called with multiple string values 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/hiDPI.js --%c

hiDPI %cexpects a parameter of type number. However, you passed 1px(string) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#hiDPI%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`hiDPI should throw an error and a warning when called with multiple string values 2`] = `
Array [
  Array [
    "%c ✨ WARNING ✨ ---- mixins/hiDPI.js --%c

hiDPI %cexpects a maximum of %c1 parameter%c. However, you passed %c2 parameters%c. These additional parameters were ignored.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#hiDPI%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold; color: green",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold; color: goldenrod",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`hiDPI should throw an error when called with a non-number value 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/hiDPI.js --%c

hiDPI %cexpects a parameter of type number. However, you passed 1px(string) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#hiDPI%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;
